# elPaSo-AUTOMATE

./: AUTHORS.md  CITATION.cff  CONTRIBUTING.md  README.md  __main__.py  requirements.txt  setup.cfg
automate/: cTestHarness.py  config.py  help.py  main.py
automate/covtools/: displayIntelCodCovSummary.py  myComp.txt
automate/datastructure/: cFeDataStructure.py
automate/logging/: cLoggingTestSuite.py
automate/math/: mMathLibrary.py
automate/mod_hdf5/: cElpasoFileRomHdf5.py  cFileHdf5.py
automate/system/: cSystemAbaqus.py  cSystemElpaso.py  cSystemInterface.py
automate/testconfigs/: cHarnessConfiguration.py
automate/testsuite/: cTestSuite.py
automate/tools/: cIssueGitLab.py  cIssueGitLabCheck.py  cTimer.py  cVisConsole.py  cVisInterface.py  cVisLogFile.py  cVisTex.py
