[metadata]
name = automate
version = 23.4.2
authors = Harikrishnan K. Sreekumar, Christopher Blech, Sabine C. Langer
license = GNU General Public License 3

[options]
install_requires =
    pytest==6.2.4
    matplotlib==3.4.3
    numpy==1.21.4
    h5py==3.5.0
    pandas==1.3.5

[options.entry_points]
console_scripts =
    automate = automate.main:main